mdapipkg/objects/Region_Health__c.object
<CustomObject>
    <fields>
        <fullName>of_joint_YPO_YPO_Gold_chapter_event_Av__c</fullName>
        <formula>IF(No_of_Chapters__c = 0, 0, of_joint_YPO_YPO_Gold_chapter_events__c / No_of_Chapters__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of joint YPO-YPO Gold chapter event Av</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_joint_YPO_YPO_Gold_chapter_events__c</fullName>
        <label># of joint YPO-YPO Gold chapter events</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_members_35_and_Under_Avg__c</fullName>
        <formula>of_members_35_and_Under__c / No_of_Chapters__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average number of members 35 and Under</inlineHelpText>
        <label># of members 35 and Under Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_members_35_and_Under__c</fullName>
        <inlineHelpText>Number of members 35 and Under</inlineHelpText>
        <label># of members 35 and Under</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_members_36_40_Avg__c</fullName>
        <formula>of_members_36_40__c / No_of_Chapters__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average number of members 36-40</inlineHelpText>
        <label># of members 36-40 Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_members_36_40__c</fullName>
        <inlineHelpText>Number of members 36-40</inlineHelpText>
        <label># of members 36-40</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_members_41_45_Avg__c</fullName>
        <formula>of_members_41_45__c / No_of_Chapters__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average number of members 41-45</inlineHelpText>
        <label># of members 41-45 Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_members_41_45__c</fullName>
        <inlineHelpText>Number of members 41-45</inlineHelpText>
        <label># of members 41-45</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_members_46_49_Avg__c</fullName>
        <formula>of_members_46_49__c / No_of_Chapters__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average number of members 46-49</inlineHelpText>
        <label># of members 46-49 Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_members_46_49__c</fullName>
        <inlineHelpText>Number of members 46-49</inlineHelpText>
        <label># of members 46-49</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_members_70_Avg__c</fullName>
        <formula>of_members_70__c / No_of_Chapters__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average number of members 70+</inlineHelpText>
        <label># of members 70+ Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_members_70__c</fullName>
        <inlineHelpText>Number of members 70+</inlineHelpText>
        <label># of members 70+</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_members_involved_in_Mentoring_Avg__c</fullName>
        <formula>IF(No_of_Chapters__c = 0, 0, of_members_involved_in_Mentoring__c / No_of_Chapters__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average number of chapter members involved in Mentoring</inlineHelpText>
        <label># of members involved in Mentoring Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_members_involved_in_Mentoring__c</fullName>
        <inlineHelpText>Number of chapter members involved in Mentoring</inlineHelpText>
        <label># of members involved in Mentoring</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_members_on_Grace_Period_Avg__c</fullName>
        <formula>Number_Members_Grace_Period__c / No_of_Chapters__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average number of members on Grace Period</inlineHelpText>
        <label># of members on Grace Period Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_new_members_since_1_July_Avg__c</fullName>
        <formula>of_new_members_since_1_July__c / No_of_Chapters__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average number of new members since 1 July (new to the chapter and/or to the organization)</inlineHelpText>
        <label># of new members since 1 July Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_new_members_since_1_July__c</fullName>
        <inlineHelpText>Number of new members since 1 July (new to the chapter and/or to the organization)</inlineHelpText>
        <label># of new members since 1 July</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_new_spouse_partners_1_July_Avg__c</fullName>
        <formula>of_new_spouse_partners_1_July__c / No_of_Chapters__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of new spouse/partners-1 July Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_new_spouse_partners_1_July__c</fullName>
        <label># of new spouse/partners-1 July</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_primary_members_30_June_Avg__c</fullName>
        <formula>Number_Primary_Members_June_30__c / No_of_Chapters__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of primary members 30 June Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_secondary_members_30_June_Avg__c</fullName>
        <formula>of_secondary_members_30_June__c / No_of_Chapters__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of secondary members 30 June Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_secondary_members_30_June__c</fullName>
        <label># of secondary members 30 June</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_spouse_partners_Avg__c</fullName>
        <formula>of_spouse_partners__c / No_of_Chapters__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average number of spouse/partners (excluding secondary members&apos; - Spouse/Partners)</inlineHelpText>
        <label># of spouse/partners Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_spouse_partners__c</fullName>
        <inlineHelpText>Number of spouse/partners (excluding secondary members&apos; - Spouse/Partners)</inlineHelpText>
        <label># of spouse/partners</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_voluntary_resignation_current_FY_Av__c</fullName>
        <formula>Number_Resignations_Voluntary__c / No_of_Chapters__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average number of Voluntary Resignations for current fiscal year</inlineHelpText>
        <label># of voluntary resignation current FY Av</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>per_of_Members_Participating_in_a_GCC__c</fullName>
        <inlineHelpText>Percentage of Chapter Members Participating in a Global Conference Call (GCC)</inlineHelpText>
        <label>% of Members Participating in a GCC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>per_of_Members_Post_to_Network_Community__c</fullName>
        <inlineHelpText>Percentage of Chapter Members Posting to a Network Community</inlineHelpText>
        <label>% of Members Post to Network Community</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>perof_Member_Children_Registered_for_YNG__c</fullName>
        <inlineHelpText>Percentage of Members Children who have registered for YNG+</inlineHelpText>
        <label>% of Member Children Registered for YNG+</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Region Health</label>
    <listViews>
        <fullName>All_Region_Data</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Report_Year_Text__c</columns>
        <columns>Report_Quarter__c</columns>
        <columns>Fiscal_Quarter__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Region Data</label>
    </listViews>
    <listViews>
        <fullName>All_Region_Health</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Fiscal_Quarter__c</columns>
        <columns>Report_Year_Text__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Region_Health__c.Current,Region_Health__c.History</value>
        </filters>
        <label>All Region Health</label>
    </listViews>
    <listViews>
        <fullName>Current_Region_Data</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Report_Year_Text__c</columns>
        <columns>Fiscal_Quarter__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Region_Health__c.Current</value>
        </filters>
        <label>Current Region Data</label>
    </listViews>
    <nameField>
        <displayFormat>RH-{0000}</displayFormat>
        <label>Region Health Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Region Health</pluralLabel>
    <recordTypes>
        <fullName>Current</fullName>
        <active>true</active>
        <description>Currently open Fiscal Quarter</description>
        <label>Current</label>
    </recordTypes>
    <recordTypes>
        <fullName>History</fullName>
        <active>true</active>
        <description>Holds information for previous Fiscal Quarters</description>
        <label>History</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>